--- a/styles/admonition.less
+++ b/styles/admonition.less
@@ -1,13 +1,3 @@
-@font-face {
-    font-family: 'Material Icons';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Material Icons'),
-         local('MaterialIcons-Regular'),
-         url('./MaterialIcons-Regular.woff2') format('woff2'),
-         url(https://fonts.gstatic.com/s/materialicons/v41/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
-  }
-
 .admonition {
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12),0 3px 1px -2px rgba(0,0,0,.2);
     position: relative;
@@ -16,17 +6,31 @@
     border-left: .4rem solid #448aff;
     border-radius: .2rem;
     overflow: auto;
+    
+    &>summary {
+        cursor: pointer;
+    }
+
+    &>.custom-block-body {
+        margin: 1em 0;
+    }
 }
 
 .admonition-icon {
     position: absolute;
     left: 1.2rem;
-    font-family: "Material Icons";
+    font-family: "FontAwesome";
+    font-style: normal;
+    font-weight: 400;
     font-size: 24px;
+    // font-size: 1.7rem;
+    // width: 1.8rem;
+    width: 24px;
     display: inline-block;
     line-height: 1;
     text-transform: none;
     letter-spacing: normal;
+    text-align: center;
     word-wrap: normal;
     white-space: nowrap;
     direction: ltr;
@@ -50,14 +54,10 @@
 
 .admonition-note {
     @color: #448aff;
-    @icon: "note";
+    @icon: "\f249";
     
-    &:extend(.admonition);
+    .admonition;
     border-left-color: @color;
-
-    &>.custom-block-body {
-        margin: 1em 0;
-    }
 
     &>.custom-block-heading {
         &:extend(.admonition-title);
@@ -73,14 +73,10 @@
 
 .admonition-info {
     @color: #009688;
-    @icon: "info_outline";
+    @icon: "\f05a";
     
-    &:extend(.admonition);
+    .admonition;
     border-left-color: @color;
-
-    &>.custom-block-body {
-        margin: 1em 0;
-    }
 
     &>.custom-block-heading {
         &:extend(.admonition-title);
@@ -96,14 +92,11 @@
 
 .admonition-danger {
     @color: #c2185b;
-    @icon: "error_outline";
+    @icon: "\f0e7";
     
-    &:extend(.admonition);
+    .admonition;
+    // .admonition;
     border-left-color: @color;
-
-    &>.custom-block-body {
-        margin: 1em 0;
-    }
 
     &>.custom-block-heading {
         &:extend(.admonition-title);
@@ -119,14 +112,10 @@
 
 .admonition-warning {
     @color: #ff9100;
-    @icon: "warning_outline";
+    @icon: "\f071";
     
-    &:extend(.admonition);
+    .admonition;
     border-left-color: @color;
-
-    &>.custom-block-body {
-        margin: 1em 0;
-    }
 
     &>.custom-block-heading {
         &:extend(.admonition-title);
@@ -142,14 +131,10 @@
 
 .admonition-success {
     @color: #00c853;
-    @icon: "check";
+    @icon: "\f00c";
     
-    &:extend(.admonition);
+    .admonition;
     border-left-color: @color;
-
-    &>.custom-block-body {
-        margin: 1em 0;
-    }
 
     &>.custom-block-heading {
         &:extend(.admonition-title);
@@ -165,14 +150,10 @@
 
 .admonition-fail {
     @color: #d32f2f;
-    @icon: "clear";
+    @icon: "\f00d";
     
-    &:extend(.admonition);
+    .admonition;
     border-left-color: @color;
-
-    &>.custom-block-body {
-        margin: 1em 0;
-    }
 
     &>.custom-block-heading {
         &:extend(.admonition-title);
@@ -188,14 +169,10 @@
 
 .admonition-question {
     @color: #64dd17;
-    @icon: "question_answer";
+    @icon: "\f059";
     
-    &:extend(.admonition);
+    .admonition;
     border-left-color: @color;
-
-    &>.custom-block-body {
-        margin: 1em 0;
-    }
 
     &>.custom-block-heading {
         &:extend(.admonition-title);
@@ -211,14 +188,10 @@
 
 .admonition-abstract {
     @color: #00b0ff;
-    @icon: "short_text";
+    @icon: "\f02d";
     
-    &:extend(.admonition);
+    .admonition;
     border-left-color: @color;
-
-    &>.custom-block-body {
-        margin: 1em 0;
-    }
 
     &>.custom-block-heading {
         &:extend(.admonition-title);
@@ -234,14 +207,10 @@
 
 .admonition-example {
     @color: #651fff;
-    @icon: "format_list_numbered";
+    @icon: "\f0cb";
     
-    &:extend(.admonition);
+    .admonition;
     border-left-color: @color;
-
-    &>.custom-block-body {
-        margin: 1em 0;
-    }
 
     &>.custom-block-heading {
         &:extend(.admonition-title);
@@ -258,12 +227,8 @@
 .admonition-spoiler {
     @color: #455a64;
     
-    &:extend(.admonition);
+    .admonition;
     border-left-color: @color;
-
-    &>.custom-block-body {
-        margin: 1em 0;
-    }
 
     &>.custom-block-heading {
         &:extend(.admonition-title);
